# critic

./: Cargo.toml  LICENSE.txt  README.md  TODOs.md
.github/workflows/: rust.yml
examples/: 01_basic_atg.rs
src/: anchor.rs  atg.rs  define.rs  dialect.rs  language.rs  lex.rs  lib.rs  main.rs  normalise.rs  transcribe.rs
src/anchor/: example.rs
src/atg/: dialect.rs  normalize.rs  test.rs
src/atg/dialect/: example.rs
src/atg/normalize/: flatten.rs  specialize.rs  tokenize.rs
src/define/: io.rs
src/define/io/: file.rs
src/dialect/: anchor.rs  atg.rs  example.rs
src/dialect/anchor/: example.rs
src/dialect/atg/: example.rs
src/io/: db.rs  file.rs  mod.rs
src/language/: dialect.rs  example.rs  lex.rs  mod.rs  morph.rs
src/language/dialect/: example.rs
src/lex/: dialect.rs  io.rs  mod.rs  propose.rs
src/lex/io/: file.rs
src/transcribe/: io.rs  mod.rs
